practice/[05]Kotlin-Ktor-Kubernetes-Practice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mipt-kotlin-ktor-load-balancer
  labels:
    owner: Ferum-bot
    environment: testing
    platform: kotlin-ktor
spec:
  type: ClusterIP
  selector:
    environment: testing
    platform: kotlin-ktor
    application: mipt-ktor-example-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: mipt-ktor-example-listner
